future ignoring of profile plots when put in profiles folder

--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,6 @@ dmypy.json
 
 # data
 sharpness/data/
-sharpness/plots_saved/*
-!sharpness/plots_saved/ROIs_anat/
+sharpness/plots_saved/profiles
 defacing/results/dilation/
 defacing/data/
